# lab_tool_for_windows

./: README.md  horus_inference_server.bat  requirements.txt  run_app.ps1
lab_tool-main/: .flake8  .gitignore  Dockerfile  README.md  app.py  mkdocs.yml  pyproject.toml  release_launch.sh  run_dev_env.sh
lab_tool-main/.github/workflows/: doc_deploy.yml  doc_test.yml  docker.yml  hf_push.yml  python-lint.yml
lab_tool-main/docs/: .pages  analyze1f.md  index.md  wavelet.md
lab_tool-main/lab_tools/: analyze1f.py  filter.py  labutils.py  spectrogram.py  ytutil.py
